<resources>
    <string name="app_name">Stand Generator</string>
    <string name="label_input_name">Enter the artist\'s name and the album you wish to use:</string>
    <string name="hint_input_name">e.g. Gorillaz Demon Days</string>
    <string name="label_output_name">Expected Name:</string>
    <string name="hint_output_name">Press the \"Generate Name\" button again if it\'s wrong</string>
    <string name="btn_gen_name">Generate Name</string>
    <string name="btn_gen_stand">Generate Stand</string>
    <string name="label_ability_link">Link to ability page</string>
    <string name="hint_output_stand">The stand data goes here.\n(Can be scrolled)</string>
    <string name="btn_copy">Copy to Clipboard</string>
    <string name="err_name_not_found">Search was unsuccessful, try again</string>
    <string name="err_name_not_generated">Something went wrong when generating name, try again</string>
    <string name="err_ability_not_generated">Something went wrong when generating ability, try again</string>
    <string name="err_dialog_name">Error</string>

    <!--<string name="original_reference">http://www.pages.drexel.edu/~dft29/Stand_Generator/Stand-Generation-Overdrive.html</string>-->
    <string name="fmt_stand_info">Stand Name: %1$s\n\nStand Ability: [%2$s](%3$s)\n\nPower - %4$c\n\nSpeed - %5$c\n\nRange - %6$c\n\nDurability - %7$c\n\nPrecision - %8$c\n\nPotential - %9$c\n\nDescription: %10$s</string>
    <string name="fmt_itunes_search">http://itunes.apple.com/search?term=%1$s</string>
    <string name="fmt_power_page">https://powerlisting.fandom.com/wiki/%1$s</string>
    <string name="random_power_page">Special:Random</string>
    <string name="stat_chars">EDCBA</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
